# mlops-trainee-udacity-course-4

./: .gitignore  README.md  environment.yml  hydra_config.yaml  main.py  model.dvc  pyproject.toml  run.py  test_main.py
.github/workflows/: format_check.yml
model/: .gitignore  dct_model.pkl  dct_model.pkl.dvc  model_card.md  model_score.txt
src/data_clean/: data_clean.py  run.py
src/training/: run.py  test_model.py
src/training/ml/: data.py  model.py
