[tool.poetry]
name = "mlops-trainee-udacity-course-4"
version = "0.1.0"
description = ""
authors = ["vela-zz"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
dvc = "^3.36.1"
mlflow = "^2.9.2"
fastapi = "^0.106.0"
uvicorn = "^0.25.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^6.1.0"
pyright = "^1.1.343"
yapf = "^0.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
